# filetype.rs

./: Cargo.toml  README.md
.github/workflows/: ci.yml  publish.yml  test-dev.yml
src/: constants.rs  enums.rs  lib.rs  matcher.rs  utils.rs
src/types/: application.rs  archive.rs  audio.rs  base.rs  document.rs  font.rs  image.rs  mod.rs  utils.rs  video.rs
src/types/utils/: common.rs  document.rs  image.rs  mod.rs
tests/: test_integration.rs
