[package]
name = "filetypes"
version = "0.1.2"
edition = "2021"
description = "Determine file type via magic numbers."
homepage = "https://github.com/anemele/filetype.rs"
repository = "https://github.com/anemele/filetype.rs"
keywords = ["filetype", "filetypes", "match"]
categories = ["command-line-utilities", "command-line-interface"]
license = "MIT"

exclude = ["tests"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
byteorder = "1.5.0"
glob = "0.3.1"
